feat(widgets): add "Manage on Web" button

--- a/app/i18n/en-US/common.json
+++ b/app/i18n/en-US/common.json
@@ -143,6 +143,7 @@
   "Click here": "Click here",
   "More Info": "More Info",
   "Revert Changes": "Revert Changes",
+  "Manage on Web": "Manage on Web",
   "Animations": "Animations",
   "Multistreaming": "Multistreaming",
   "Upgrade to Ultra": "Upgrade to Ultra",
