--- a/app/i18n/en-US/common.json
+++ b/app/i18n/en-US/common.json
@@ -170,5 +170,6 @@
   "Alert Box Library": "Alert Box Library",
   "Alert Box Settings": "Alert Box Settings",
   "Alerts and Widgets": "Alerts and Widgets",
-  "AI": "AI"
+  "AI": "AI",
+  "Between": "Between"
 }
