--- a/app/i18n/en-US/streaming.json
+++ b/app/i18n/en-US/streaming.json
@@ -175,6 +175,13 @@
   "Failed to load YouTube events": "Failed to load YouTube events",
   "Failed to load Facebook events": "Failed to load Facebook events",
   "Stream to multiple platforms with Prime": "Stream to multiple platforms with Prime",
+  "Grow faster and reach a wider audience by streaming to multiple destinations at once, including Twitch, YouTube, TikTok, Kick, and more. Get unlimited multistreaming with Streamlabs Ultra.": "Grow faster and reach a wider audience by streaming to multiple destinations at once, including Twitch, YouTube, TikTok, Kick, and more. Get unlimited multistreaming with Streamlabs Ultra.",
+  "Learn more about Ultra": "Learn more about Ultra",
+  "Why Streamlabs Multistream?": "Why Streamlabs Multistream?",
+  "While other providers rely on your bandwidth and PC, Streamlabs Multistream servers do the heavy lifting so you maintain your stream quality.": "While other providers rely on your bandwidth and PC, Streamlabs Multistream servers do the heavy lifting so you maintain your stream quality.",
+  "New creators who multistream regularly* are 2x as likely to attract 5+ concurrent viewers.": "New creators who multistream regularly* are 2x as likely to attract 5+ concurrent viewers.",
+  "* new users who have been streaming up to six months and who have multistreamed 7+ times": "* new users who have been streaming up to six months and who have multistreamed 7+ times",
+  "Learn more about Streamlabs Multistream": "Learn more about Streamlabs Multistream",
   "Go live on multiple platforms at once with Multistreaming.": "Go live on multiple platforms at once with Multistreaming.",
   "Step 1: Connect your streaming accounts in the <stream>Stream</stream> settings.": "Step 1: Connect your streaming accounts in the <stream>Stream</stream> settings.",
   "Step 2: Ensure the \"Confirm stream title and game before going live\" option is checked in the <general>General</general> settings tab.": "Step 2: Ensure the \"Confirm stream title and game before going live\" option is checked in the <general>General</general> settings tab.",
