--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -441,5 +441,6 @@
   "Health changes": "Health changes",
   "Search...": "Search...",
   "Virtual Cam": "Virtual Cam",
-  "Virtual Cam Error": "Virtual Cam Error"
+  "Virtual Cam Error": "Virtual Cam Error",
+  "Configure on G HUB": "Configure on G HUB"
 }
