Fix missing key error

--- a/app/i18n/en-US/transitions.json
+++ b/app/i18n/en-US/transitions.json
@@ -27,5 +27,7 @@
   "This scene transition is managed by an App and cannot be edited.": "This scene transition is managed by an App and cannot be edited.",
   "Global Transition": "Global Transition",
   "Edit": "Edit",
-  "Live": "Live"
+  "Live": "Live",
+  "Transitions": "Transitions",
+  "Connections": "Connections"
 }
