--- a/app/i18n/vi-VN/widgets.json
+++ b/app/i18n/vi-VN/widgets.json
@@ -1,5 +1,6 @@
 {
   "Add Widgets": "Add Widgets",
+  "Manage on Web": "Manage on Web",
   "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.": "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.",
   "Thanks viewers with notification popups": "Thanks viewers with notification popups",
   "Custom on-screen alerts to thank your loyal viewers for following, subbing, tipping and more.": "Custom on-screen alerts to thank your loyal viewers for following, subbing, tipping and more.",
