extract game pulse initdefaults flow

--- a/app/i18n/en-US/widgets.json
+++ b/app/i18n/en-US/widgets.json
@@ -212,5 +212,6 @@
   "Select an Event": "Select an Event",
   "Trigger Type": "Trigger Type",
   "Trigger Name": "Trigger Name",
-  "Select a Trigger Type": "Select a Trigger Type"
+  "Select a Trigger Type": "Select a Trigger Type",
+  "Triggers are setup and ready to go! Feel free to uncheck the ones you don't want.": "Triggers are setup and ready to go! Feel free to uncheck the ones you don't want."
 }
